@@ -27,13 +27,21 @@ Config::setConfigurationMap( const QVariantMap& cfgMap )
     m_username = getString( cfgMap, "username", "user" );
 
     m_featureSshd = getBool( cfgMap, "featureSshd", true );
+    m_featureFsType = getBool( cfgMap, "featureFsType", false );
 
     m_cmdLuksFormat = getString( cfgMap, "cmdLuksFormat", "cryptsetup luksFormat --use-random" );
     m_cmdLuksOpen = getString( cfgMap, "cmdLuksOpen", "cryptsetup luksOpen" );
-    m_cmdMkfsRoot = getString( cfgMap, "cmdMkfsRoot", "mkfs.ext4 -L 'unknownOS_root'" );
     m_cmdMount = getString( cfgMap, "cmdMount", "mount" );
     m_targetDeviceRoot = getString( cfgMap, "targetDeviceRoot", "/dev/unknown" );
     m_targetDeviceRootInternal = getString( cfgMap, "targetDeviceRootInternal", "" );
+
+    m_cmdMkfsRootBtrfs = getString( cfgMap, "cmdMkfsRootBtrfs", "mkfs.btrfs -L 'unknownOS_root'" );
+    m_cmdMkfsRootExt4 = getString( cfgMap, "cmdMkfsRootExt4", "mkfs.ext4 -L 'unknownOS_root'" );
+    m_cmdMkfsRootF2fs = getString( cfgMap, "cmdMkfsRootF2fs", "mkfs.f2fs -l 'unknownOS_root'" );
+    m_fsList = getStringList( cfgMap, "fsModel", QStringList { "ext4", "f2fs", "btrfs" } );
+    m_defaultFs = getString( cfgMap, "defaultFs", "ext4" );
+    m_fsIndex = m_fsList.indexOf( m_defaultFs );
+    m_fsType = m_defaultFs;
 
     m_cmdInternalStoragePrepare = getString( cfgMap, "cmdInternalStoragePrepare", "ondev-internal-storage-prepare" );
     m_cmdPasswd = getString( cfgMap, "cmdPasswd", "passwd" );
@@ -66,6 +74,24 @@ Config::createJobs()
 void
 Config::runPartitionJobThenLeave( bool b )
 {
+    Calamares::ViewManager* v = Calamares::ViewManager::instance();
+    QString cmdMkfsRoot;
+    if ( m_fsType == QStringLiteral( "btrfs" ) )
+    {
+        cmdMkfsRoot = m_cmdMkfsRootBtrfs;
+    }
+    else if ( m_fsType == QStringLiteral( "f2fs" ) )
+    {
+        cmdMkfsRoot = m_cmdMkfsRootF2fs;
+    }
+    else if ( m_fsType == QStringLiteral( "ext4" ) )
+    {
+        cmdMkfsRoot = m_cmdMkfsRootExt4;
+    }
+    else
+    {
+        v->onInstallationFailed( "Unknown filesystem: '" + m_fsType + "'", "");
+    }
     /* HACK: run partition job
      * The "mobile" module has two jobs, the partition job and the users job.
      * If we added both of them in Config::createJobs(), Calamares would run
@@ -78,7 +104,7 @@ Config::runPartitionJobThenLeave( bool b )
     Calamares::Job* j = new PartitionJob( m_cmdInternalStoragePrepare,
                                           m_cmdLuksFormat,
                                           m_cmdLuksOpen,
-                                          m_cmdMkfsRoot,
+                                          cmdMkfsRoot,
                                           m_cmdMount,
                                           m_targetDeviceRoot,
                                           m_targetDeviceRootInternal,
@@ -87,7 +113,6 @@ Config::runPartitionJobThenLeave( bool b )
                                           m_fdePassword );
     Calamares::JobResult res = j->exec();
 
-    Calamares::ViewManager* v = Calamares::ViewManager::instance();
     if ( res )
     {
         v->next();
@@ -142,4 +167,27 @@ void
 Config::setInstallFromExternalToInternal( const bool val )
 {
     m_installFromExternalToInternal = val;
+}
+
+void
+Config::setFsType( int idx )
+{
+    if ( idx >= 0 && idx < m_fsList.length() ) {
+        setFsType( m_fsList[ idx ] );
+    }
+}
+void
+Config::setFsType( const QString& fsType )
+{
+    if ( fsType != m_fsType ) {
+        m_fsType = fsType;
+        emit fsTypeChanged( m_fsType );
+    }
+}
+
+void
+Config::setFsIndex( const int fsIndex )
+{
+    m_fsIndex = fsIndex;
+    emit fsIndexChanged( m_fsIndex );
 }
