@@ -22,6 +22,7 @@ Page
         "default_pin": "Lockscreen PIN",
         "ssh_confirm": "SSH server",
         "ssh_credentials": "SSH credentials",
+        "fs_selection": "Root filesystem",
         "fde_confirm": "Full disk encryption",
         "fde_pass": "Full disk encryption",
         "install_confirm": "Ready to install",
@@ -36,6 +37,8 @@ Page
          "screens": ["default_pin"]},
         {"name": "sshd",
          "screens": ["ssh_confirm", "ssh_credentials"]},
+        {"name": "fsType",
+         "screens": ["fs_selection"]},
         {"name": "fde",
          "screens": ["fde_confirm", "fde_pass"]},
         {"name": "installConfirm",
